--- a/website folder (IT37)/iong.html
+++ b/website folder (IT37)/iong.html
@@ -1,38 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
     <style>
         .navbar {
-            background-color: #b66736; /* Custom background color */
+            background-color: #b66736;
+            /* Custom background color */
         }
+
         .navbar .nav-link {
-            color: #ffffff; /* White text */
+            color: #ffffff;
+            /* White text */
         }
+
         .navbar .nav-link:hover {
-            color: #ffc107; /* Yellow on hover */
+            color: #ffc107;
+            /* Yellow on hover */
         }
     </style>
 </head>
-<body>
+
+<body class="body">
     <nav class="navbar fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="boss1.png" alt="Bootstrap" width="50px" height="50px" class="d-inline-block align-text-top">
-              Jaspher Eats TV Blog YT TIKTOK
+                <img src="/website folder (IT37)/pics/boss1.png" alt="Bootstrap" width="50px" height="50px"
+                    class="d-inline-block align-text-top">
+                Jaspher Eats TV Blog YT TIKTOK
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                aria-labelledby="offcanvasDarkNavbarLabel">
                 <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Jaspher Eats</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
@@ -43,7 +59,8 @@
                             <a class="nav-link" href="#">Link</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
                                 More
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
@@ -64,5 +81,24 @@
             </div>
         </div>
     </nav>
+
+   
+    <div class="container" style="margin-top: 80px;"> <!-- Added margin-top -->
+        <div class="word">
+            Welcome to FOODINGS, where we dive deep into the flavors of Manolo. 
+            Our mission is to provide you with honest and detailed reviews of the most delicious 
+            dishes this town has to offer. We taste, critique, and savor every bite, bringing you
+            insights on everything from street food to fine dining. Whether you're looking for your
+            next favorite meal or just curious about the local cuisine, our reviews will guide you
+            through the best food experiences in Manolo.
+        </div>
+    </div>
+
+
+
+
+
+
 </body>
+
 </html>
