--- a/website folder (IT37)/Contact.html
+++ b/website folder (IT37)/Contact.html
@@ -12,9 +12,11 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
+
     <style>
         .navbar {
-            background-color: white;
+            background-color: #b66736;
             /* Custom background color */
         }
 
@@ -36,7 +38,7 @@
             <a class="navbar-brand" href="#">
                 <img src="/website folder (IT37)/pics/boss1.png" alt="Bootstrap" width="50px" height="50px"
                     class="d-inline-block align-text-top">
-                     Foodings 
+                    Foodings
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
@@ -69,21 +71,15 @@
    
     <div class="container" style="margin-top: 80px;"> <!-- Added margin-top -->
         <div class="word">
-            Welcome to FOODINGS, where we dive deep into the flavors of Manolo. 
-            Our mission is to provide you with honest and detailed reviews of the most delicious 
-            dishes this town has to offer. We taste, critique, and savor every bite, bringing you
-            insights on everything from street food to fine dining. Whether you're looking for your
-            next favorite meal or just curious about the local cuisine, our reviews will guide you
-            through the best food experiences in Manolo.
+           CONTACT US
         </div>
     </div>
-
     <footer class="text-center" style="margin-top: 450px;">
         <div class="container">
             <div class="footer-links">
                 <a href="About.html">About Us</a>
                 <a href="https://www.facebook.com/profile.php?id=61566297068385" class="footer-link"><i class="bi bi-facebook"></i></a>
-                <i class="bi bi-tiktok"></i>
+             
                 <a href="#"><i class="bi bi-instagram"></i></a>
                 <a href="#"><i class="bi bi-tiktok"></i></a>
                 
@@ -92,6 +88,7 @@
             <p>&copy; FOODINGS. All rights reserved.</p>
         </div>
     </footer>
+
 
 
 
