--- a/website folder (IT37)/index.html
+++ b/website folder (IT37)/index.html
@@ -11,33 +11,26 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-
-    <style>
-        .navbar {
-            background-color: #b66736;
-            /* Custom background color */
-        }
-
-        .navbar .nav-link {
-            color: #ffffff;
-            /* White text */
-        }
-
-        .navbar .nav-link:hover {
-            color: #ffc107;
-            /* Yellow on hover */
-        }
-    </style>
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 </head>
 
 <body class="body">
     <nav class="navbar fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="/website folder (IT37)/pics/boss1.png" alt="Bootstrap" width="50px" height="50px"
-                    class="d-inline-block align-text-top">
-                Jaspher Eats TV Blog YT TIKTOK
+            <a class="navbar-brand" style="color: white; font-weight: bold; font-family: 'Dancing Script', cursive;  font-size: xxx-large; padding-left: 35px; letter-spacing: 2px; ">
+                Foodings       
             </a>
+            
+            <a class="navbar-brand" href="index.html" style="color: white; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; ">
+                Home
+            </a>
+            <a class="navbar-brand" href="about.html" style="color: white; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; float: left; ">
+                About
+            </a>
+          
+            <a class="navbar-brand" href="contact.html" style="color: white; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; float: left; margin-right: 20px;" >
+                Contact us
+               </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                 aria-label="Toggle navigation">
@@ -49,6 +42,9 @@
                     <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Jaspher Eats</h5>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                         aria-label="Close"></button>
+
+
+
                 </div>
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
