--- a/website folder (IT37)/about.html
+++ b/website folder (IT37)/about.html
@@ -72,13 +72,15 @@
            
         </div>
     </div>
+    <img src="/website folder (IT37)/pics/logo foodings.png" alt="logo" class="logo">
     <div class="container" style="margin-top: 80px;"> 
         <div class="word">
-            Welcome to FOODINGS! We are a vibrant online community dedicated to celebrating food from around Manolo Fortich. Our mission is to connect food lovers through shared recipes and culinary stories.
 
-At FOODINGS, you’ll find a diverse collection of easy-to-follow recipes that cater to all tastes and dietary needs. You'll also find restaurant recomendations and ratings as our team is going to review all restaurants here at Manolo Fortich.
+           <h1 style="margin-bottom: 50px;"> Welcome to FOODINGS! We are a vibrant online community dedicated to celebrating food from around Manolo Fortich. Our mission is to connect food lovers through shared recipes and culinary stories.</h1>
+<h1 style="margin-top: 70pxs;">At FOODINGS, you’ll find a diverse collection of easy-to-follow recipes that cater to all tastes and dietary needs. You'll also find restaurant recomendations and ratings as our team is going to review all restaurants here at Manolo Fortich.</h1>
+<h1 style="margin-top: 50px ;">
+    Join us as we explore the joy of food together. Welcome to FOODINGS—where every meal tells a story!</h1>
 
-Join us as we explore the joy of food together. Welcome to FOODINGS—where every meal tells a story!
         </div>
     </div>
     <footer class="text-center mt-5">
