--- a/website folder (IT37)/index.html
+++ b/website folder (IT37)/index.html
@@ -97,7 +97,7 @@
    
     <hr class="rounded" style="background-color: rgb(255, 255, 255, 1); height: 5px; margin-top: 50px;">
 
-<h1 class="food" style="text-align: center; color: white; font-family: Arial, Helvetica, sans-serif; font-size: 7ch;">Foods</h1>
+<h1 class="food" style="text-align: center; color: white; font-family: Arial, Helvetica, sans-serif; font-size: 7ch; margin-bottom: 50px;">Foods</h1>
 
 
 
