Fixing the navbar bugs

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <a class="navbar-link" href="index.html" style="color: white;  text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
                 Home
             </a>
-            <a class="navbar-link" href="about.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
+            <a class="navbar-link" href="/website folder (IT37)/About-us/about.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
                 About
             </a>
-            <a class="navbar-link" href="Contactus.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; padding-left: 20px;">
+            <a class="navbar-link" href="/website folder (IT37)/Contact-us/Contactus.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; padding-left: 20px;">
                 Contact Us
             </a>
 
@@ -77,7 +77,7 @@
         </div>
     </div>
 
-    <!--pics-->
+   
     <div class="image">
         <img src="/website folder (IT37)/pics/d2.avif" alt="dishs" class="right-img">
         <p class="word">
