Fixing the carousel

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
    
     <hr class="rounded" style="background-color: rgb(255, 255, 255, 1); height: 5px; margin-top: 5rem;">
 
-<h1 class="food" style="text-align: center; color: white; font-family: Arial, Helvetica, sans-serif; font-size: 7ch;">Foods</h1>
+<h1 class="food" style="text-align: center; color: white; font-family: 'Dancing Script', cursive; font-size: 7ch;">Food Types</h1>
 
 
 
@@ -111,16 +111,16 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/website folder (IT37)/pics/d4.jpg" class="d-block" alt="rosebeef" style="object-fit: cover; width: 100%; height: 600px;">
+        <img src="/website folder (IT37)/pics/d4.jpg">
       </div>
       <div class="carousel-item">
-        <img src="/website folder (IT37)/pics/d3.jpg" class="d-block" alt="d3" style="object-fit: cover; width: 100%; height: 600px;">
+        <img src="/website folder (IT37)/pics/d3.jpg" >
       </div>
       <div class="carousel-item">
-        <img src="/website folder (IT37)/pics/d6.jpg" class="d-block" alt="d2" style="object-fit: cover; width: 100%; height: 600px;">
+        <img src="/website folder (IT37)/pics/d6.jpg">
       </div>
       <div class="carousel-item">
-        <img src="/website folder (IT37)/pics/d5.jpg" class="d-block" alt="d2" style="object-fit: cover; width: 100%; height: 600px;">
+        <img src="/website folder (IT37)/pics/d5.jpg">
       </div>
       
     </div>
