--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Food Findings</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -138,7 +138,7 @@
 
 
 <div class="second-background">
-    <h2>Explore More Dishes</h2>
+    <h1 style="text-align: left; color: black; font-family: 'Dancing Script', cursive; font-size: 6rem; margin-left: 5in;">Dessert</h1>
     <p>Find out more about our favorite selections in Manolo Fortich!</p>
 
 
@@ -147,6 +147,11 @@
         <div class="col">
           <div class="card">
             <img src="website folder (IT37)/pics/s1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title"></h5>
+                <p class="card-text" style="font-family: Arial, Helvetica, sans-serif; font-weight: bold;">Experience the perfect harmony of flavors with our signature fruit-infused milk tea, combining fresh 
+                    fruit purees and sweetened milk for a delightful treat that dances on your palate.</p>
+              </div>
           </div>
         </div>
         <div class="col">
