--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
    
     <div class="image" style="margin-bottom: 5rem;">
-        <img src="/website folder (IT37)/pics/d2.avif" alt="dishs" class="right-img">
-        <p class="word">
+        <img src="website folder (IT37)/pics/rosebeef.jpg" alt="dishs" class="right-img"  style="box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); border-radius: 8px; width: 80%;  max-width: 650px; margin-right: 6rem; ">
+        <p class="word" style="font-family: 'Dancing Script', cursive;">
             Welcome to Foodings!
         </p>
 
@@ -96,44 +96,55 @@
    
     <hr class="rounded" style="background-color: rgb(255, 255, 255, 1); height: 5px; margin-top: 5rem;">
 
-<h1 class="food" style="text-align: center; color: white; font-family: 'Dancing Script', cursive; font-size: 7ch;">Food Types</h1>
+<h1 class="food" style="text-align: center; color: white; font-family: 'Dancing Script', cursive; font-size: 7ch;">Food Resto's</h1>
 
 
 
-
-
-<div class="container">
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+<div class="container icon-row">
+    
+    <div class="icon-item">
+        <img src="/website folder (IT37)/pics/r1.jpg" alt="Icon 1">
+        <p class="icon-name">Restaurant Name 1</p>
     </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="/website folder (IT37)/pics/d4.jpg">
-      </div>
-      <div class="carousel-item">
-        <img src="/website folder (IT37)/pics/d3.jpg" >
-      </div>
-      <div class="carousel-item">
-        <img src="/website folder (IT37)/pics/d6.jpg">
-      </div>
-      <div class="carousel-item">
-        <img src="/website folder (IT37)/pics/d5.jpg">
-      </div>
-      
+    <div class="icon-item">
+        <img src="/website folder (IT37)/pics/pinotus logo.jpg" alt="Icon 2">
+        <p class="icon-name">Image Name 2</p>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+    <div class="icon-item">
+        <img src="/website folder (IT37)/pics/r2.jpg" alt="Icon 3">
+        <p class="icon-name">Image Name 3</p>
+    </div>
+    <div class="icon-item">
+        <img src="/website folder (IT37)/pics/r3.png" alt="Icon 4">
+        <p class="icon-name">Image Name 4</p>
+    </div>
+    <div class="icon-item">
+        <img src="/website folder (IT37)/pics/r4.png" alt="Icon 5">
+        <p class="icon-name">Image Name 5</p>
+    </div>
+    <div class="icon-item">
+        <img src="/website folder (IT37)/pics/r6.jpg" alt="Icon 6">
+        <p class="icon-name">Image Name 6</p>
+    </div>
+    <div class="icon-item">
+        <img src="/website folder (IT37)/pics/r7.jpg" alt="Icon 7">
+        <p class="icon-name">Image Name 7</p>
+    </div>
+    <div class="icon-item">
+        <img src="/website folder (IT37)/pics/r8.jpg" alt="Icon 8">
+        <p class="icon-name">Image Name 8</p>
+    </div>
+    <div class="icon-item">
+        <img src="/website folder (IT37)/pics/r9.jpg" alt="Icon 9">
+        <p class="icon-name">Image Name 9</p>
+    </div>
+    <div class="icon-item">
+        <img src="/website folder (IT37)/pics/r10.jpg" alt="Icon 10">
+        <p class="icon-name">Image Name 10</p>
+    </div>
 </div>
-</div>
+
+
 
 
 
