Adding links on icons

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <a class="navbar-link" href="index.html" style="color: white;  text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
                 Home
             </a>
-            <a class="navbar-link" href="/website folder (IT37)/About-us/about.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
+            <a class="navbar-link" href="/About-us/about.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
                 About
             </a>
-            <a class="navbar-link" href="/website folder (IT37)/Contact-us/Contactus.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; padding-left: 20px;">
+            <a class="navbar-link" href="/Contact-us/Contactus.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; padding-left: 20px;">
                 Contact Us
             </a>
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
@@ -78,7 +78,7 @@
 
    
     <div class="image" style="margin-bottom: 5rem;">
-        <img src="website folder (IT37)/pics/rosebeef.jpg" alt="dishs" class="right-img"  style="box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); border-radius: 8px; width: 80%;  max-width: 650px; margin-right: 6rem; ">
+        <img src="pics/rosebeef.jpg" alt="dishs" class="right-img"  style="box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); border-radius: 8px; width: 80%;  max-width: 650px; margin-right: 6rem; ">
         <p class="word" style="font-family: 'Dancing Script', cursive;">
             Welcome to Foodings!
         </p>
@@ -99,50 +99,45 @@
 <h1 class="food" style="text-align: center; color: white; font-family: 'Dancing Script', cursive; font-size: 7ch;">Food Resto's</h1>
 
 
-
 <div class="container icon-row">
-    
     <div class="icon-item">
-        <img src="/website folder (IT37)/pics/r1.jpg" alt="Icon 1">
-        <p class="icon-name">Restaurant Name 1</p>
+        <img src="pics/r1.jpg" alt="Icon 1">
+        <a href="" class="icon-link"><p class="icon-name">Matthew's Restobar</p></a>
     </div>
     <div class="icon-item">
-        <img src="/website folder (IT37)/pics/pinotus logo.jpg" alt="Icon 2">
-        <p class="icon-name">Image Name 2</p>
+        <img src="pics/pinotus logo.jpg" alt="Icon 2">
+        <a href="link_to_pinutos_sa_kanto_page" class="icon-link"><p class="icon-name">Pinutos sa Kanto</p></a>
     </div>
     <div class="icon-item">
-        <img src="/website folder (IT37)/pics/r2.jpg" alt="Icon 3">
-        <p class="icon-name">Image Name 3</p>
+        <img src="pics/r2.jpg" alt="Icon 3">
+        <a href="link_to_del_monte_clubhouse_page" class="icon-link"><p class="icon-name">Del Monte Clubhouse</p></a>
     </div>
     <div class="icon-item">
-        <img src="/website folder (IT37)/pics/r3.png" alt="Icon 4">
-        <p class="icon-name">Image Name 4</p>
+        <img src="pics/r3.png" alt="Icon 4">
+        <a href="link_to_fjk_foodhouse_page" class="icon-link"><p class="icon-name">FJK FoodHouse</p></a>
     </div>
     <div class="icon-item">
-        <img src="/website folder (IT37)/pics/r4.png" alt="Icon 5">
-        <p class="icon-name">Image Name 5</p>
+        <img src="pics/r4.png" alt="Icon 5">
+        <a href="link_to_sj_dinner_page" class="icon-link"><p class="icon-name">SJ DINNER</p></a>
     </div>
     <div class="icon-item">
-        <img src="/website folder (IT37)/pics/r6.jpg" alt="Icon 6">
-        <p class="icon-name">Image Name 6</p>
+        <img src="pics/r6.jpg" alt="Icon 6">
+        <a href="link_to_pizza_kid_page" class="icon-link"><p class="icon-name">PIZZA KID</p></a>
     </div>
     <div class="icon-item">
-        <img src="/website folder (IT37)/pics/r7.jpg" alt="Icon 7">
-        <p class="icon-name">Image Name 7</p>
+        <img src="pics/r7.jpg" alt="Icon 7">
+        <a href="link_to_lamp_lighter_cafe_page" class="icon-link"><p class="icon-name">Lamp Lighter Café</p></a>
     </div>
     <div class="icon-item">
-        <img src="/website folder (IT37)/pics/r8.jpg" alt="Icon 8">
-        <p class="icon-name">Image Name 8</p>
+        <img src="pics/r8.jpg" alt="Icon 8">
+        <a href="link_to_baellys_page" class="icon-link"><p class="icon-name">Baelly’s</p></a>
     </div>
     <div class="icon-item">
-        <img src="/website folder (IT37)/pics/r9.jpg" alt="Icon 9">
-        <p class="icon-name">Image Name 9</p>
-    </div>
-    <div class="icon-item">
-        <img src="/website folder (IT37)/pics/r10.jpg" alt="Icon 10">
-        <p class="icon-name">Image Name 10</p>
+        <img src="pics/r10.jpg" alt="Icon 10">
+        <a href="link_to_frontyard_snack_bar_page" class="icon-link"><p class="icon-name">Frontyard Snack Bar</p></a>
     </div>
 </div>
+
 
 
 
@@ -159,7 +154,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card">
-            <img src="website folder (IT37)/pics/s1.jpg" class="card-img-top" alt="...">
+            <img src="pics/s1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title"></h5>
                 <p class="card-text" style="font-family: Arial, Helvetica, sans-serif; font-weight: bold;">Experience the perfect harmony of flavors with our signature fruit-infused milk tea, combining fresh 
@@ -169,7 +164,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="website folder (IT37)/pics/s2.jpg" class="card-img-top" alt="...">
+            <img src="pics/s2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"></h5>
               <p class="card-text" style="font-family: Arial, Helvetica, sans-serif; font-weight: bold;">Treat yourself to a slice of our moist red velvet cake, baked to perfection and layered generously with silky cream cheese frosting, ensuring a delightful experience in every bite.</p>
@@ -178,7 +173,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="website folder (IT37)/pics/s3.jpg" class="card-img-top" alt="...">
+            <img src="pics/s3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"></h5>
               <p class="card-text" style="font-family: Arial, Helvetica, sans-serif; font-weight: bold;">Indulge in our signature berry cupcake, made with real berry purée for a delightful taste, elegantly finished with a swirl of creamy frosting and a sprinkle of fresh berries on top</p>
