add some changes

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a class="nav-link" href="index.html" style="color: black;">Restaurants</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Contact.html" style="color: black;">Foods</a>
+                    <a class="nav-link" href="Contact.html" style="color: black;">Food</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="About.html" style="color: black;">Location</a>
@@ -105,16 +105,16 @@
         <a href="" class="icon-link"><p class="icon-name">Matthew's Restobar</p></a>
     </div>
     <div class="icon-item">
-        <img src="pics/pinotus logo.jpg" alt="Icon 2">
-        <a href="link_to_pinutos_sa_kanto_page" class="icon-link"><p class="icon-name">Pinutos sa Kanto</p></a>
+        <img src="pics/r9.jpg" alt="Icon 2">
+        <a href="link_to_pinutos_sa_kanto_page" class="icon-link"><p class="icon-name">Stone House</p></a>
     </div>
     <div class="icon-item">
         <img src="pics/r2.jpg" alt="Icon 3">
         <a href="link_to_del_monte_clubhouse_page" class="icon-link"><p class="icon-name">Del Monte Clubhouse</p></a>
     </div>
     <div class="icon-item">
-        <img src="pics/r3.png" alt="Icon 4">
-        <a href="link_to_fjk_foodhouse_page" class="icon-link"><p class="icon-name">FJK FoodHouse</p></a>
+        <img src="pics/r5.jpg" alt="Icon 4">
+        <a href="link_to_fjk_foodhouse_page" class="icon-link"><p class="icon-name">RRJ FOOD HAUS</p></a>
     </div>
     <div class="icon-item">
         <img src="pics/r4.png" alt="Icon 5">
@@ -231,7 +231,9 @@
                 <p class="card-text" style="font-size: 1.1rem;">
                   Sink your teeth into our big, juicy burger stacked high with a perfectly seasoned, hearty beef patty, melting layers of rich cheese, and all the classic toppings. This burger is crafted to satisfy those serious cravings with every bite bursting with flavor and texture. Ideal for true burger lovers who appreciate the perfect blend of fattiness and cheesiness!
                 </p>
-                <p class="card-text"><small class="text-body-secondary"></small></p>
+                <p class="card-text"><small class="text-body-secondary">
+
+                </small></p>
               </div>
             </div>
           </div>
