--- a/website folder (IT37)/About-us/about.html
+++ b/website folder (IT37)/About-us/about.html
@@ -75,7 +75,7 @@
     <div class="about-me">
         <img src="../pics/logo foodings.png" alt="Your Name">
         <div class="info">
-            <h1>About Me</h1>
+            <h1>About Us</h1>
             <p>Welcome to FOODINGS! We are a vibrant online community dedicated to celebrating food from around Manolo Fortich. Our mission is to connect food lovers through shared recipes and culinary stories.</p>
 
             <p>At FOODINGS, you’ll find a diverse collection of easy-to-follow recipes that cater to all tastes and dietary needs. You'll also find restaurant recomendations and ratings as our team is going to review all restaurants here at Manolo Fortich.</p>
@@ -86,13 +86,56 @@
     <div class="about-me">
         <div class="info">
             <h1>Additional Information</h1>
-            <p>In this space, I am always sharing fresh, flavorful, (mostly) healthy recipes that I love to make and eat in my real, actual, every day life. If I wouldn’t eat it in real life, I won’t put in on the blog. My goal is to inspire you with food that is both approachable AND exciting, whether you’re cooking for yourself, your family, your roommates, or your friends. I want you to be so excited about these recipes that you eagerly await 5pm when you can go home from work and start cooking.</p>
+            <p>In this space, We am always sharing fresh, flavorful, (mostly) healthy recipes that I love to make and eat in my real, actual, every day life. If I wouldn’t eat it in real life, I won’t put in on the blog. My goal is to inspire you with food that is both approachable AND exciting, whether you’re cooking for yourself, your family, your roommates, or your friends. I want you to be so excited about these recipes that you eagerly await 5pm when you can go home from work and start cooking.</p>
 
-            <p>On a related note, I absolutely LOVE seeing the food that you’re making. It will make my day if you tag @Foodings in your Instagram photos and stories! We love to shout out our favorites on Fridays with our Reader Awards on Instagram Stories.</p>
+            <p>On a related note, We absolutely LOVE seeing the food that you’re making. It will make my day if you tag @Foodings in your Instagram photos and stories! We love to shout out our favorites on Fridays with our Reader Awards on Instagram Stories.</p>
             
             <p>Join us as we explore the joy of food together. Welcome to FOODINGS—where every meal tells a story!</p>
         </div>
     </div>
+    <h1 class="title">Meet The Team</h1>
+    <div class="container">
+        <img src="../pics/ab1.jpg" alt="Profile Image" class="profile-img">
+        <div class="description">
+            <h3>Jaspher Jules S. Sales</h3>
+            <p>2nd Year BSIT-Block B</p>
+            <P>Hacker</P>
+        </div>
+    </div>
+    <div class="container">
+        <img src="../pics/ab3.jpg" alt="Profile Image" class="profile-img">
+        <div class="description">
+            <h3>Precelle Mae S. Nieze</h3>
+            <p>2nd Year BSIT-Block B</p>
+            <p>Hustler</p>
+        </div>
+    </div>
+    <div class="container">
+        <img src="../pics/ab5.jpg" alt="Profile Image" class="profile-img">
+        <div class="description">
+            <h3>Rimond Jabez O. Binayao</h3>
+            <p>2nd Year BSIT- Block B</p>
+            <p>Hipster</p>
+        </div>
+    </div>
+    <div class="container">
+        <img src="../pics/ab4.jpg" alt="Profile Image" class="profile-img">
+        <div class="description">
+            <h3>Ahkisha Mikelle N. Kiunisala</h3>
+            <p>2nd Year BSIT- Block B</p>
+            <p>Hustler</p>
+
+        </div>
+    </div>
+    <div class="container">
+        <img src="../pics/ab2.jpg" alt="Profile Image" class="profile-img">
+        <div class="description">
+            <h3>Ralph Hope C. Ayo-on</h3>
+            <p> 2nd Year BSIT- Block B</p>
+            <p>Hacker</p>
+        </div>
+    </div>
+
 
     <footer class="text-center mt-5">
         <div class="container">
