Adding the store infos

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </div>
     <div class="icon-item">
         <img src="pics/r2.jpg" alt="Icon 3">
-        <a href="link_to_del_monte_clubhouse_page" class="icon-link"><p class="icon-name">Del Monte Clubhouse</p></a>
+        <a href="DMC.html" class="icon-link"><p class="icon-name">Del Monte Clubhouse</p></a>
     </div>
     <div class="icon-item">
         <img src="pics/r5.jpg" alt="Icon 4">
@@ -130,11 +130,11 @@
     </div>
     <div class="icon-item">
         <img src="pics/r8.jpg" alt="Icon 8">
-        <a href="link_to_baellys_page" class="icon-link"><p class="icon-name">Baelly’s</p></a>
+        <a href="Bllys.html" class="icon-link"><p class="icon-name">Baelly’s</p></a>
     </div>
     <div class="icon-item">
         <img src="pics/r10.jpg" alt="Icon 10">
-        <a href="link_to_frontyard_snack_bar_page" class="icon-link"><p class="icon-name">Frontyard Snack Bar</p></a>
+        <a href="FSB.html" class="icon-link"><p class="icon-name">Frontyard Snack Bar</p></a>
     </div>
 </div>
 
